samples/_failures_safe/1761423218_2856db_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_76f7f44e.c: In function ‘main’:
./samples/SAFE/__tmp_76f7f44e.c:164:17: error: expected declaration or statement at end of input
  164 |                 printf("Goodbye!\n");
      |                 ^~~~~~
./samples/SAFE/__tmp_76f7f44e.c:164:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_76f7f44e.c:164:17: error: expected declaration or statement at end of input
